--- a/styke.css
+++ b/styke.css
@@ -18,12 +18,10 @@ body, html {
     overflow: hidden;
 }
 
-#video {
+#canvas {
     width: 100%;
     height: 100%;
-    object-fit: cover;
     transform: scaleX(-1); /* Отражение как в зеркале */
-    filter: url(#water-effect); /* Применение фильтра воды */
 }
 
 .overlay {
@@ -34,23 +32,10 @@ body, html {
     height: 100%;
     background: rgba(0, 191, 255, 0.2); /* Прозрачный голубой слой */
     pointer-events: none;
+    animation: water 10s infinite;
 }
 
 @keyframes water {
-    0% { transform: translate(0, 0) }
-    50% { transform: translate(-20px, 20px) }
-    100% { transform: translate(0, 0) }
-}
-
-.overlay::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 191, 255, 0.2);
-    mix-blend-mode: screen;
-    filter: blur(5px);
-    animation: water 5s infinite;
+    0%, 100% { filter: blur(5px) hue-rotate(0deg); }
+    50% { filter: blur(15px) hue-rotate(20deg); }
 }
